--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,10 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+server.js
+index.test.js
+/__mocks__
+jest.config.js
+fileTransformer.js
+webpack.config.js
