--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "battleships",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "private": "true",
   "scripts": {
     "test": "jest",
