--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.22.10",
-    "@babel/core": "^7.22.10",
+    "@babel/core": "^7.22.20",
     "@babel/plugin-transform-modules-commonjs": "^7.22.5",
-    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-env": "^7.22.20",
     "babel-jest": "^29.6.3",
+    "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "express": "^4.18.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.2",
